Fixed cork-board card overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -476,6 +476,7 @@ a.submit-button, input[type="submit"]
   padding: 5px;
   float: left;
   white-space: pre-wrap;
+  overflow: auto;
 
   .card-text {
     font-size: 12px;
